# pysketcher_v2api

./: .coveragerc  .flake8  noxfile.py  pyproject.toml  requirements.txt
bfgs_test/: coincident_point.py  tangent_lines.py
examples/: simple_point.py
jupyter/: perpendicular_distance.ipynb
pysketcher/: __init__.py  _abstract_scalar.py  _additive_constraint.py  _constrainable.py  _constrained_object.py  _constrained_value.py  _constraint.py  _constraint_set.py  _divisive_constraint.py  _error.py  _fixed_value_constraint.py  _linked_value_constraint.py  _multiplicative_constraint.py  _parameter.py  _parameter_instance.py  _parameterized_object.py  _resolvable.py  _scalar.py  _scalar_associative_binary_constraint.py  _scalar_binary_constraint.py  _scalar_constraint.py  _subtractive_constraint.py  _value_constraint.py
tests/: __init__.py  contract_scalar_associative_binary_constraint.py  contract_scalar_binary_constraint.py  contract_scalar_constraint.py  test_additive_constraint.py  test_constrained_value.py  test_constraint_set.py  test_divisive_constraint.py  test_fixed_value_constraint.py  test_linked_value_constraint.py  test_multiplicative_constraint.py  test_parameter.py  test_parameter_instance.py  test_scalar.py  test_scalar_binary_operation_constraint.py  test_subtractive_constraint.py
