[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pysketcher_v2"
version = "0.0.1"
description = "Geometric Sketching Utility for Python - version 2 API PoC"
license = "mit"
authors = [
    "Richard Vodden <richard@vodden.com>",
]
readme = "README.md"
packages = [{ include = "pysketcher" }]
repository = "https://github.com/rvodden/pysketcher"
homepage = "https://github.com/rvodden/pysketcher"
keywords = ['sketch','graphics','scientific','engineering','geometry']

[tool.poetry.extras]
docs = ["sphinx"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-testdox = "^3.0.0"
pylint = "^2.9.6"
flake8 = "^3.9.0"
coverage = "^5.3"
mypy = "^0.910"
pydocstyle = "^6.1.1"
black = "^21.7b0"
'zest.releaser' = { version = "^6.22.1", extras = ['recommended'] }
wheel = "^0.35.1"
pytest-cov = "^2.11.1"
nox = "^2021.6.12"
flake8-black = "^0.2.3"
flake8-import-order = "^0.18.1"
flake8-bandit = "^2.1.2"
nox-poetry = "^0.8.4"
flake8-docstrings = "^1.6.0"
sphinx-autodoc-typehints = "^1.11.1"
six = "^1.15.0"
zipp = "^3.5.0"
darglint = "^1.7.0"
blackdoc = "^0.3"
flake8-bugbear = "^21.3.2"
typed-ast = "^1.4.1"

[tool.pytest.ini_options]
testpaths = ["tests", "pysketcher"]
python_files = "test_*.py"
python_functions = "test_*"
junit_duration_report = "call"
junit_suite_name = "pysketcher"
junit_family = "xunit1"
addopts = ["--doctest-modules", "--testdox"]

[tool.coverage.run]
branch = true
source = ["pysketcher/"]

[tool.coverage.report]
show_missing = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = "celery,django,environ,pyquery,pytz,redis,requests,rest_framework"

[mypy]
# follow and type check all modules, including third-party ones
follow_imports = "normal"
# precede all errors with “note” messages explaining the context of the error
show_error_context = true
# This is the last resort solution, we should fine-tune it with
# specific sections [mypy-<library_name>] for libraries that
# have missing stubs or issues with imports
# https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports
ignore_missing_imports = true
# Check all defs, even untyped ones (with less precise semantics)
check_untyped_defs = true
# All functions/methods should have complete signatures
# (this basically disallows gradual typing for all module-level definitions)
disallow_incomplete_defs = true
# all writes to cache should be discarded
# (it's different from incremental mode)
cache_dir = "/dev/null"
# report an error whenever the code uses an unnecessary cast
# that can safely be removed.
warn_redundant_casts = true
# warn about unused [mypy-<pattern>] config file sections.
warn_unused_configs = true
# find gaps and omissions in type stubs, including third-party ones
warn_incomplete_stub = true
# helps to find any `# type: ignore` annotations that we no longer need
warn_unused_ignores = true
# All arguments that allow None should be annotated as Optional[T]
strict_optional = true
# stop treating arguments with a None default value as having
# an implicit Optional[T] type
no_implicit_optional = true